eos-voter/public/stylesheets/style.css
body {
  padding: 10px;
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
  /*background-color: #EEE;*/
  margin: 0px;
  padding: 0px;
}

a {
  color: #00B7FF;
}

.eoslogo {
  height: 70px;
}

.block-producer-column-header {
    font-weight:bold;
}

.centre-header {
  width: 100%;
  color: #eee;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  font-size: 28px;
}

.pageheader {
  background-color: #333;
  overflow: hidden;
  position: relative;
  width: 100%;
  top: 0;
  position: fixed;
  z-index: 1;
}

.pageheader-spacer {
  height: 93px;
}

.pageheaderitem {
  display: inline-block;
  margin: 10px;
}

.signupbuttoncontainer {
  float: right;
}

.signupbutton {
  height: 50px;
  width: 170px;

  background-color: #333;
  border: 3px solid white;
  color: white;
  font-size: 16px;
  border-radius: 8px;

  position: absolute;
  top: 50%; left: calc(100% - 50px - 50px);
  transform: translate(-50%,-50%);
}

.signupbutton:hover {
  background-color: #FFF;
  border: 3px solid black;
  color: black;
}

.centre {
    text-align: center;
}

.centre-activated {
    text-align: center;
    color: red;
}

.error-paragraph {
    color: red;
}

.centre-h1 {
    text-align: center;
    margin: 0px;
    position: absolute;
    top: 50%; left: 50%;
    transform: translate(-50%,-50%);
}

div.block-producer-row:nth-child(even) {
  background-color: #CCC;
}

div.block-producer-row:nth-child(odd) {
  background-color: #EEE;
}

.block-producer-cell {
  border: 1px solid white;
  display: inline-block;
  font-size: 16px;
  padding: 10px;
  height: 26px;
}

.block-producer-cell-1 {
  width: 10%;
  /*text-align: right;*/
}

.block-producer-cell-2 {
  width: 30%;
}

.block-producer-cell-3 {
  width: 20%;
}

.block-producer-cell-4 {
  width: 7%;
}

.right {
  text-align: right;
}

.block-producer-cell-5 {
  width: calc(30% - 85px);
}

.content-container {
  margin: 20px;
  padding: 20px;
  border: 2px lightgrey solid;
}

.float-right-cell {
  float: right;
  margin: 0px;
  padding: 0px;
}


.checkbox-container {
    display: block;
    position: relative;
    padding-left: 35px;
    /*margin-bottom: 12px;*/
    cursor: pointer;
    /*font-size: 22px;*/
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    /*float: right;*/
    left: 40px;
}

/* Hide the browser's default checkbox */
.checkbox-container input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
}

/* Create a custom checkbox */
.checkmark {
    position: absolute;
    top: 0;
    left: 0;
    height: 25px;
    width: 25px;
    background-color: #ffe;
}

/* On mouse-over, add a grey background color */
.checkbox-container:hover input ~ .checkmark {
    background-color: #bbb;
}

/* When the checkbox is checked, add a blue background */
.checkbox-container input:checked ~ .checkmark {
    background-color: #2196F3;
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
    content: "";
    position: absolute;
    display: none;
}

/* Show the checkmark when checked */
.checkbox-container input:checked ~ .checkmark:after {
    display: block;
}

/* Style the checkmark/indicator */
.checkbox-container .checkmark:after {
    left: 9px;
    top: 5px;
    width: 5px;
    height: 10px;
    border: solid white;
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
}

.vote-helper-button {
  height: 40px;
  width: 150px;

  background-color: #EEE;
  border: 3px solid black;
  color: black;
  font-size: 16px;
  border-radius: 8px;
  margin-left: 10px;
}

.vote-helper-button:hover {
  background-color: #111;
  border: 3px solid white;
  color: white;
}

.big-vote-now-button {
  height: 80px;
  width: 300px;

  background-color: #ecffab;
  border: 6px solid black;
  color: black;
  font-size: 32px;
  border-radius: 16px;
  margin-left: 10px;
}

.big-vote-now-button:hover {
  background-color: #111;
  border: 6px solid white;
  color: white;
}

.loader {
  border: 4px solid darkgrey;
  border-radius: 50%;
  border-top: 4px solid black;
  width: 15px;
  height: 15px;
  -webkit-animation: spin 2s linear infinite; /* Safari */
  animation: spin 2s linear infinite;
}

/* Safari */
@-webkit-keyframes spin {
  0% { -webkit-transform: rotate(0deg); }
  100% { -webkit-transform: rotate(360deg); }
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }  
}

.dialog {
  position: fixed;
  left: 0;
  top: 0;
  height: calc(100vh - 80px);
  width: calc(100vw - 80px);
  background-color: rgba(0, 0, 0, 0.35);
  padding: 40px;
  z-index: 2;
}

/*
.dialog * {
  border: 1px solid red;
}
*/

.dialogContent {
  background: #fff;
  padding: 40px;
  width: calc(100% - 80px);
  height: calc(100% - 80px);
  
  h2 {
    margin-top: 0;
  }

}

.scatterPopupText {
  width: 100%;
  height: 100%;
}

a.statement {
  color: black;
}

a.statement:link {
  color: black;
}

a.statement:visited {
  color: black;
}

a.statement:hover {
  color: black;
}

a.statement:active {
  color: black;
}

.bolded-vote-info {
  font-size: 16px;
}

.vote_info {
  padding: 8px;
  background-color: #eee;
  border: 1px solid black;
  border-radius: 3px;
}

.small-vote-total {
  color: darkblue;
  /*font-size: 9px;*/
}

